--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@hapi/hapi": "^21.3.0",
+    "@hapi/jwt": "^3.2.3",
+    "bcrypt": "^6.0.0",
     "dotenv": "^16.0.3",
     "joi": "^17.9.1",
     "nanoid": "^3.3.4",
